--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,10 @@
 			<param-name>com.sun.jersey.config.property.packages</param-name>
 			<param-value>br.com.sapato</param-value>
 		</init-param>
-		
+		<init-param>
+			<param-name>teste</param-name>
+			<param-value>mojo jojo</param-value>
+		</init-param>		
 		<init-param>
 
 	        <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
